# PROJECTS

./: functions.py  funkcje.py  main.py  sort.py
BIG_DATA_PANDAS/: Hw2_2.ipynb  Hw2_3.ipynb
BIRTHDAYS_WISHES/: README.md  functions.py  main.py
BOT/: README.md  bot.py
BOTF/: README.md  botf.py
BOT_ASSISTAN_Group_project/: README.md
Bałagan/: Archiwum_nieznane.wim
DJANGO/: README.md
DJANGO/new_project/myapp/: forms.py  models.py  urls.py  (+1 more)
DJANGO/venv_django/: pyproject.toml
DOCKER/: README.md
DOCKER/mynewbot/: Dockerfile  mynewbot.py  pyproject.toml  requirements.txt
Exchange_NBP_currency/: README.md  kalkulator_walut.py
GOIT_Homework_06/: tresc_zadania.txt
GOIT_Homework_06/Bałagan/: Historia_Grecji.doc  Nazwa_Grecja.txt  Opis_Grecji.docx  Plik_tekstowy_01.txt  Plik_tekstowy_02.txt  Plik_tekstowy_03.txt
GOIT_Homework_07/: README.md  main.py  sort.py  tresc_zadania.txt
GOIT_Homework_07/Bałagan/: Kompresja.tar  Kursy_walut_NBP.xlsx
GOIT_Homework_08_birthdays/: functions.py  homework.txt  main.py  tresc_zadania.txt
GOIT_Homework_09/: tresc_zadania.txt
MY_BOT/: README.md
SORT_FILES/: README.md
SORT_FILES/Bałagan/: Kursy_walut_NBP.xlsx  Testowa_prezentacja.pptx
SORT_FILES/clean_folder/: setup.py
University_SQL/: README.md  backup_database_postgres.sql  creating_and_inserting_db_.py  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
WEB_PAGE/: README.md  error.html  idea.html  index.html  main.py  pyproject.toml  styles.css
(+18 files in other folders)
