[tool.poetry]
name = "mynewbot"
version = "0.1.0"
description = ""
authors = ["Kiniaka <147816937+Kiniaka@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
